Fix regression preventing accelerated upgrade notifications for unstable Chrome.

BUG=837562

Change-Id: I0f78d94137ad8875e18fe4ce44e6b03ddc9bcb97
Reviewed-on: https://chromium-review.googlesource.com/1033738
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555328}
Former-commit-id: 475e0139388d9eac0bd35bb65714c0f98ae137c4